--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 
 title:            amingilani
 locale:           en_US
-url:              https://amingilani.github.io
-url:              http://localhost:4000
+url:              http://amingilani.github.io
 
 
 # Jekyll configuration
