bugfixe, css files should now always render

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            amingilani
 locale:           en_US
-url:              http://amingilani.github.io
+url:              https://amingilani.github.io
 
 
 # Jekyll configuration
