Update _config.yml. Changed url to a proactive link

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            amingilani
 locale:           en_US
-url:              https://amingilani.github.io
+url:              //amingilani.github.io
 
 
 # Jekyll configuration
