Add navigation link to contact page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # Site navigation links
 
+- title: All Posts
+  url: /posts/
+
 - title: About
   url: /about/
 
-- title: All Posts
-  url: /posts/
+- title: Contact
+  url: /contact/
