SEO friendly URLs

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url:              //amingilani.github.io
 
 # Jekyll configuration
 
-permalink:   /:categories/:title/
+permalink:   pretty
 markdown:    kramdown
 highlighter: pygments
 sass:
