remove broken steam social link

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ owner:
   tumblr: #username
   pinterest: #username
   foursquare: #username
-  steam: aminshahgilani
+  steam: 
   dribbble: #username
 
 include: [".htaccess"]
