fix stackoverflow social link

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ owner:
     ad-slot: 
   bing-verify: 
   github: amingilani
-  stackoverflow: https://stackoverflow.com/users/3970701/amingilani
+  stackoverflow: 3970701/amingilani
   linkedin: #username
   instagram: amingilani
   lastfm: #username
