--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ owner:
     plus: aminshahgilani
     analytics: UA-36754712-2
     verify:
-    ad-client: 
-    ad-slot: 
+    ad-client: ca-pub-2244833599847323
+    ad-slot: 3914920293
   bing-verify: 
   github: amingilani
   stackoverflow: 3970701/amingilani
