--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            amingilani
 locale:           en_US
-url:              //amingilani.github.io
+url:              //amin.gilani.me
 
 
 # Jekyll configuration
@@ -29,7 +29,7 @@ owner:
   name: Amin Shah Gilani
   avatar: https://avatars0.githubusercontent.com/u/1188552?v=2&s=460
   bio: "Yet another humanoid."
-  email: 
+  email:
   disqus-shortname: amingilani
   twitter: amingilani
   facebook: aminshahgilani
@@ -39,7 +39,7 @@ owner:
     verify:
     ad-client: ca-pub-2244833599847323
     ad-slot: 3914920293
-  bing-verify: 
+  bing-verify:
   github: amingilani
   stackoverflow: 3970701/amingilani
   linkedin: #username
@@ -48,7 +48,7 @@ owner:
   tumblr: #username
   pinterest: #username
   foursquare: #username
-  steam: 
+  steam:
   dribbble: #username
 
 include: [".htaccess"]
